--- a/style.css
+++ b/style.css
@@ -5,14 +5,17 @@
     font-family: sans-serif;
 }
 
+body {
+    background: #000;  
+}
+
 .container {
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0;    
     width: 100%;
-    display: flex;
-
-    }
+    display: flex;         
+}
 
 .container section {
     min-width: 100%;
@@ -20,24 +23,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: #fffee1;
+    height: 100vh;    
 }    
 
 .container section:nth-child(2) {
-    background: #e2fcff;
+    
 }
 
 .container section:nth-child(3) {
-    background: #d0eaff;
+    
 }
 
 .container section:nth-child(4) {
-    background: #fce8f4;
+    
 }
 
 .container section:nth-child(5) {
-    background: #bae0e4;
+    
 }
 
 .container section .content {
@@ -48,13 +50,13 @@
 
 .container section .content h2 {
     font-size: 4em;
-    color: #111;
+    color: #fff;
 }
 
 .container section .content p {
     font-size: 1.3em;
     line-height: 1.4em;
-    color: #111;
+    color: #fff;
 }
 
 @media (max-width: 991px){
